force-app/main/default/objects/Issue_Book__c/Issue_Book__c.object-meta.xml
<CustomObject>
    <label>Issue Book</label>
    <nameField>
        <displayFormat>Issue-{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issue Books</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>