force-app/main/default/objects/Issue_Book__c/fields/Due_Date1__c.field-meta.xml
<CustomField>
    <fullName>Due_Date1__c</fullName>
    <label>Due Date1</label>
    <type>Date</type>
</CustomField>