force-app/main/default/objects/Issue_Book__c/validationRules/Validate_quantity.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_quantity</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISNEW() , Book__r.Quantity__c  &lt;= 0, 
ISCHANGED(Book__c) &amp;&amp; Book__r.Quantity__c  &lt;= 0)</errorConditionFormula>
    <errorMessage>This Book Is Out Of Stock</errorMessage>
</ValidationRule>